--- a/.asf.yaml
+++ b/.asf.yaml
@@ -29,3 +29,13 @@ github:
     squash: true
     merge: false
     rebase: false
+  dependabot_updates: true
+  protected_branches:
+    main:
+      required_status_checks:
+        strict: true
+        contexts:
+          - Required
+      required_pull_request_reviews:
+        dismiss_stale_reviews: true
+        required_approving_review_count: 1
