add exclude-patterns in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,3 +26,5 @@ updates:
       actions-deps:
         patterns:
           - "*"
+        exclude-patterns:
+          - "github.com/apache/skywalking-cli"
